Testcases/pos/test17.jl
function main()
if true
else
end
if false
else
    println()
    println()
end

if true else end
end
main()