Testcases/neg/test01.jl
# no condition
function main()
if 
    println("a") 
end
main()
